--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lista de presentes do Chá de Casa Nova de Felipe e Bárbara">
-    <title>Chá de Casa Nova - Felipe & Bárbara</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Lista de presentes do Chá de Casa Nova de Felipe e Bárbara"
+    />
+    <title>Chá de Casa Nova - Felipe &amp; Bárbara</title>
+
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+
   <body>
     <div id="root"></div>
-    <script type="text/babel" src="./app.js"></script>
+    <script type="text/babel" data-presets="env,react" src="./app.js"></script>
   </body>
 </html>
